# rage_math

./: .gitignore  CMakeLists.txt  README.md
cmake/: External_GTest.cmake
incl/rage_math/: Math.h  Matrix.h  Vector2.h  Vector3.h
src/: Math.cpp  Matrix.cpp
tests/: runner.cpp  test_math.cpp  test_matrix.cpp  test_vec2.cpp  test_vec3.cpp
